--- a/client/src/assets/styles/styles.scss
+++ b/client/src/assets/styles/styles.scss
@@ -1,1 +1,9 @@
 @import "variables.scss";
+
+.btn {
+	padding: $padding $padding*2;
+	background: $background-yellow;
+	color: #e0e0e0;
+	border: 0;
+	border-radius: $radius;
+}
