feat(client): products searcher

--- a/client/src/assets/styles/styles.scss
+++ b/client/src/assets/styles/styles.scss
@@ -2,7 +2,7 @@
 
 .btn {
 	padding: $padding $padding*2;
-	background: $background-yellow;
+	background: $background-black;
 	color: #e0e0e0;
 	border: 0;
 	border-radius: $radius;
