--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,4 +1,5 @@
 $padding: 8px;
 $margin: 8px;
 $radius: 8px;
-$background-yellow: #c4a02b;
+$background-black: #131921;
+$background-black-hover: #e1e1e1;
