refactor(client): cart list

--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 $padding: 8px;
 $margin: 8px;
 $radius: 8px;
-$background-black: #131921;
+$background-black: #20272f;
 $background-black-hover: #e1e1e1;
