--- a/client/src/assets/styles/styles.scss
+++ b/client/src/assets/styles/styles.scss
@@ -17,3 +17,27 @@
 	cursor: pointer;
 	transition: all 0.3s;
 }
+
+.btn-yellow {
+	background-color: #db9a31;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.btn-yellow:hover {
+	background-color: #a07023;
+}
+
+.btn-red {
+	background-color: #db5f4b;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.btn-red:hover {
+	background-color: #b84633;
+}
+
+.btn-green {
+	background-color: #85a767;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.btn-green:hover {
+	background-color: #5f8141;
+}
