feat(client): footer

--- a/client/src/assets/styles/styles.scss
+++ b/client/src/assets/styles/styles.scss
@@ -1,13 +1,5 @@
 @import "variables.scss";
 
-.v-btn {
-	padding: $padding $padding*2;
-	background: $background-black;
-	color: #e0e0e0;
-	border: 0;
-	border-radius: $radius;
-}
-
 .btn {
 	//padding: 10px 20px;
 	font-size: 16px;
@@ -40,4 +32,14 @@
 }
 .btn-green:hover {
 	background-color: #5f8141;
+}
+
+.shadow-grey-200 {
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.section {
+	display: flex;
+	flex-direction: column;
+	min-height: 70vh; // The minimum height of the container is equal to the height of the viewport
 }
